# hoor_buch

./: .gitignore  CMakeLists.txt  README.md  go.mod  go.sum  learngo.go  library.json.bak  main.go
ClientApp/: .gitignore  CMakeLists.txt  README.md  TODO.md  conanfile.txt  testfile.py
ClientApp/include/: AudioBookPlayer.h  BookProgress.h  LibraryManager.h  connection.h  datatypes.h  gui.h  math_utils.h  other.h  utility.h
ClientApp/src/: AudioBookPlayer.cpp  BookProgress.cpp  LibraryManager.cpp  connection.cpp  gui.cpp  main.cpp  main.cpp.bak  math_utils.cpp  other.cpp  utility.cpp
ClientApp/tests/: CMakeLists.txt  test1.cpp
ServerApp/: go.mod  main.go
ServerApp/client/: main.go
ServerApp/shared/: types.go
docs/: Overview.md  requirements.md
hoor_buch_requirements/.obsidian/: workspace.json
src/audio_manager/: audio_file_utils.go  audio_manager.go  file_utils.go  gui.go  library_management.go  networking.go  playback_control.go  types.go
