# hoor_buch/ClientApp/tests/CMakeLists.txt

# Find and include the CTest module
include(CTest)

# Define your test executable and source files
# add_executable(testClientApp test1.cpp ../src/math_utils.cpp) # List your test files here

# # Link the test executable against includes
# target_include_directories(testClientApp PRIVATE ../include)

# # Link the test executable to google test
# target_link_libraries(testClientApp GTest::gtest GTest::gtest_main)

# # Add tests to the project
# add_test(NAME TestClientApp COMMAND testClientApp)
